crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__gather_config_axis1_no_bounds_check.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
GatherConfig {
    axis: 1,
    indices_shape: (
        16,
        32,
    ),
    bounds_check: false,
}
