crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__gqa_config_4_to_1_ratio.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
GqaConfig {
    num_q_heads: 32,
    num_kv_heads: 8,
    head_dim: 128,
    seq_len: 1024,
    causal: true,
    scale: None,
}
