crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__kernel_capabilities_cpu_only.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: caps
---
KernelCapabilities {
    cpu_rust: true,
    cuda_compiled: false,
    cuda_runtime: false,
    hip_compiled: false,
    hip_runtime: false,
    oneapi_compiled: false,
    oneapi_runtime: false,
    opencl_compiled: false,
    opencl_runtime: false,
    cpp_ffi: false,
    simd_level: Avx2,
}
