crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__kernel_capabilities_full_gpu.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: caps
---
KernelCapabilities {
    cpu_rust: true,
    cuda_compiled: true,
    cuda_runtime: true,
    hip_compiled: false,
    hip_runtime: false,
    oneapi_compiled: false,
    oneapi_runtime: false,
    opencl_compiled: true,
    opencl_runtime: true,
    cpp_ffi: true,
    simd_level: Avx512,
}
