crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__model_format_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: formats
---
[
    Gguf,
    SafeTensors,
    HuggingFace,
]
