crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__pool_config_avg_pool_2.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
PoolConfig {
    pool_type: Average,
    kernel_size: 2,
    stride: 2,
    padding: 0,
    dilation: 1,
    ceil_mode: false,
}
