crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__pool_config_global_average.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
PoolConfig {
    pool_type: GlobalAverage,
    kernel_size: 0,
    stride: 0,
    padding: 0,
}
